# llm-trust

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  system.md
ablation_prompts/: README.md  ablation_baseline_prompts.json
concordance/: CONCORDANCE_RESULTS.md  adversarial_review.md  concordance.json  concordance_partial.jsonl  concordance_spotcheck_key.json  concordance_spotcheck_sheet.md  concordance_three_way.md  concordance_tiers.md  consolidated_concordance_key.json  consolidated_concordance_sheet.md  poison_reconstruction_review.md  poison_reconstruction_review_key.json  regrade_concordance_key.json  regrade_concordance_result.md  regrade_concordance_sheet.md  remaining_to_rate.md  taxonomy_spotcheck_key.json  taxonomy_spotcheck_sheet.md
data/: action_injections.json  authority_proof.json  config.toml  data_perf.json  data_poison.json  data_web_additional.json  excluded_examples.toml  judge_cases_combined.toml  poison_conflict_cache.json  poison_conflict_wiki_long.json  prompts.json  prompts_default.toml  real_payloads.json  skill_pass_CONTENT.md  skill_pass_USER.md  skill_pass_WEB.md  trust_conflict_cases.toml  trust_model.toml  trust_model_example2.toml  v6e_combined_v2.jsonl  wiki_corpus.toml  wiki_ood_cache.json  wiki_random_cache.json
docs/: DATASHEET.md  METHODOLOGY.md  dataset_design.md  library_design.md  poison_test_design.md  seed_robustness_trajectory.md  trust_model.md
results/: heldout_results.md  poison_conflict_dump.jsonl  poison_results.md  review_2tier.key.json  review_2tier.md  review_3tier.key.json  review_3tier.md  review_4tier.key.json  review_4tier.md  spotcheck.key.json  spotcheck.md  spotcheck_analysis.md  tier_matrix_dump.jsonl  tier_matrix_results.md
runs/: _wiki_remeasure.py  attribution_aggregate.py  attribution_remeasure.jsonl  attribution_remeasure.py  attribution_summary.json  concordance_openai.jsonl  concordance_openai.py  data_report.json  final_eval.jsonl  final_eval_smoke.jsonl  final_eval_summary.json  final_eval_tagged.jsonl  latency_remeasure.json  latency_remeasure.py  moo_run_summary.json  multistart_results.json  pareto_archive.json  pareto_sweep_log.jsonl  poison_conflict_fetch_gen.py  poison_conflict_gen.py  poison_conflict_grade.py  poison_conflict_grades.jsonl  poison_conflict_regrade.jsonl  poison_conflict_regrade.py  poison_conflict_regrade_summary.json  poison_conflict_run.py  poison_conflict_summary.json  poison_matrix_grade.py  poison_matrix_run.py  redteam_blackbox.jsonl  redteam_f1.jsonl  redteam_f2.jsonl  redteam_summary.json  regrade_adaptive_genuine.jsonl  regrade_adaptive_genuine.py  regrade_adaptive_summary.json  regrade_concordance.py  regrade_genuine_leak.jsonl  regrade_genuine_leak.py  regrade_genuine_leak_summary.json  (+10 more)
tests/: conftest.py  test_authority.py  test_conditioned.py  test_config.py  test_config_values.py  test_data.py  test_data_config.py  test_e2e_smoke.py  test_final_eval_cache.py  test_harness.py  test_judge_metric_factory.py  test_judge_window.py  test_monitor.py  test_moo_robustness.py  test_optimizer_decisions.py  test_pareto.py  test_passifier.py  test_policy.py  test_portability.py  test_prompt_pack.py  test_properties.py  test_ring_spec.py  test_seed_localization.py  test_tag_eval_records.py  test_trust_agnostic.py  test_trust_spec.py
tools/: adversarial_review.py  concordance_spotcheck.py  consolidated_concordance.py  (+7 more)
(+38 files in other folders)
